style: fixes the positioning of all open selectors to be aligned to the containing selector box instead of the input

--- a/remix/app/styles/bggStats/datePickerStyles.css
+++ b/remix/app/styles/bggStats/datePickerStyles.css
@@ -12,7 +12,7 @@
 
 .react-date-picker {
   display: inline-flex;
-  position: relative;
+  position: static !important;
 }
 
 .react-date-picker,
@@ -56,7 +56,7 @@
 .react-date-picker__inputGroup__input {
   min-width: 0.54em;
   height: 100%;
-  position: relative;
+  /* position: relative; */
   padding: 0 1px;
   border: 0;
   background: none;
@@ -106,9 +106,9 @@
 .react-date-picker__calendar {
   width: 350px;
   max-width: 100vw;
-  position: absolute;
+  /* position: absolute;
   top: 100%;
-  left: 0;
+  left: 0; */
   margin-top: .25rem;
   margin-bottom: .25rem;
   z-index: 1;
@@ -130,7 +130,7 @@
 /* START DATERANGE PICKER STYLES */
 .react-daterange-picker {
   display: inline-flex;
-  position: relative;
+  /* position: relative; */
 }
 
 .react-daterange-picker,
@@ -231,8 +231,8 @@
   width: 350px;
   max-width: 100vw;
   position: absolute;
-  top: 100%;
-  left: 0;
+  left: -2rem !important;
+  top: 2rem !important;
   margin-top: .25rem;
   margin-bottom: .25rem;
   z-index: 1;
@@ -255,7 +255,7 @@
 .react-calendar {
   width: 350px;
   max-width: 100%;
-  background: hsl(240, 54%, 97%);
+  background: hsl(210, 40%, 98%);
   /* border: 2px solid #a0a096; */
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
